--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,23 +1,31 @@
+/* Regular */
+@font-face {
+  font-family: 'Noto Sans Arabic';
+  src: url('/fonts/notosans-arabic-regular.ttf') format('truetype');
+  font-weight: 400; /* regular font weight */
+  font-style: normal;
+}
+
 /* Medium */
 @font-face {
-	font-family: "Noto Sans Arabic";
-	src: url("/fonts/notosans-arabic-medium.ttf") format("truetype");
-	font-weight: 500; /* Medium font weight */
-	font-style: normal;
+  font-family: 'Noto Sans Arabic';
+  src: url('/fonts/notosans-arabic-medium.ttf') format('truetype');
+  font-weight: 500; /* Medium font weight */
+  font-style: normal;
 }
 
 /* SemiBold */
 @font-face {
-	font-family: "Noto Sans Arabic";
-	src: url("/fonts/notosans-arabic-semibold.ttf") format("truetype");
-	font-weight: 600; /* SemiBold font weight */
-	font-style: normal;
+  font-family: 'Noto Sans Arabic';
+  src: url('/fonts/notosans-arabic-semibold.ttf') format('truetype');
+  font-weight: 600; /* SemiBold font weight */
+  font-style: normal;
 }
 
 /* Bold */
 @font-face {
-	font-family: "Noto Sans Arabic";
-	src: url("/fonts/notosans-arabic-bold.ttf") format("truetype");
-	font-weight: 700; /* Bold font weight */
-	font-style: normal;
+  font-family: 'Noto Sans Arabic';
+  src: url('/fonts/notosans-arabic-bold.ttf') format('truetype');
+  font-weight: 700; /* Bold font weight */
+  font-style: normal;
 }
